--- a/pfecollector/src/containers/home/style.css
+++ b/pfecollector/src/containers/home/style.css
@@ -4,6 +4,8 @@
     bottom:0;
     left:0;
     background-color:#eee;
-    padding:60px;
+    padding-top:60px;
+    padding-right: 0;
+    padding-left: 0;
     box-shadow: inset 0 0 2px grey;
 }
